<resources>
    <string name="app_name">Dr Fever: Paracetamol &amp; Ibuprofen PL</string>
    <string name="title_home">Home Temperature</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="HintAmount">How much drug</string>
    <string name="paracetamol_calculator">Paracetamol Calculator</string>
    <string name="age_of_child">Wiek</string>
    <string name="count_paracetamol">OBLICZ</string>
    <string name="weight_in_kg">Waga</string>
    <string name="age">Lata</string>
    <string name="weight">Kg</string>
    <string name="amount_of_drugs_for_the_kid">Here would be info about amount of drugs for the kid</string>
    <string name="amountParacetamol7_12"> 1/2 pills every 6-8 hour</string>
    <string name="amountParacetamolAdult"> 1-2 pills 2-4 times a day , not often than 4 hours</string>
    <string name="choose_drug">    Choose drug       </string>
    <string name="select_age_and_weight">Please select Age and Weight of the patient</string>
    <string name="check_amotaks">Select drug: </string>
    <string name="select_drug">Select drug:</string>
    <string name="title_activity_obrazek">obrazek</string>
    <string name="syrop">SYROP Ibuprofen</string>
    <string name="max_daily_dosage_ibuprofen">*Max dawka dobowa 1600 mg</string>
    <string name="max_daily_dosage_paracetamol">*Max dawka dobowa 4000 mg</string>
    <string name="value_greater_than_0">Wybierz wage</string>
    <string name="paracetamol_max_dawka_dobowa_4000_mg">Maksymalna dawka dobowa 4000 mg</string>
    <string name="ibuprofen_max_dawka_dobowa">Maksymalna dawka dobowa 1600 mg</string>
    <string name="dawka_jednorazowa">Dawka jednorazowa</string>

    <string name="dla_osoby_doroslej_nalezy_ustawic_suwaki_n_maksymalnie_w_prawo_czyli_18_lat_i_60_kg">* Dorosly: suwak ustawic maksymalnie w prawo czyli 18 lat i 60 kg</string>

    <string name="wyliczona_dawka_ibuprofen">Dawke wyliczona mozna podac co 8 godzin</string>
    <string name="wyliczona_dawka_paracetamol">Dawke wyliczona mozna podac co 6 godzin</string>

</resources>
