<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zigzags"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewWeightInKgParacetamol"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/weight_in_kg"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewWeightParacetamol"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarWeight"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAgeParacetamol"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:max="50"
        android:progress="10"
        android:colorControlActivated="#e40c3f"
        android:colorControlNormal="#00b0ff"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAgeOfChildParacetamol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age_of_child"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAgeParacetamol"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/age"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarAge"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:colorControlActivated="#e40c3f"
        android:colorControlNormal="#00b0ff"
        android:max="50"
        android:progress="10"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/editTextCounted"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAgeParacetamol"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:hint="Amount of drugs"
        android:inputType="text|textMultiLine"
        android:text="@string/amount_of_drugs_for_the_kid"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/buttonCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/oblicz_transparent"
        android:text="@string/count_paracetamol"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>

